# handwright

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md
engine/fontgen/: builder.py
engine/glyphs/: extractor.py
engine/renderer/: handwriting.py
engine/segmentation/: detector.py
engine/worksheet/: generator.py
tests/: test_api.py  test_detector.py  test_e2e_pipeline.py  test_font_builder.py  test_glyph_extractor.py  test_renderer.py  test_security.py  test_synthetic_e2e.py  test_upload_errors.py  test_validation.py  test_worksheet_generator.py
tests/fixtures/: generate_synthetic.py
web/api/: Dockerfile  main.py
web/frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web/frontend/src/__tests__/: api.test.ts  home.test.tsx  upload.test.tsx  worksheet.test.tsx
web/frontend/src/app/: error.tsx  global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/frontend/src/app/generate/: layout.tsx  page.tsx
web/frontend/src/app/review/: layout.tsx  page.tsx
web/frontend/src/app/upload/: page.tsx
web/frontend/src/app/worksheet/: page.tsx
web/frontend/src/components/: nav.tsx  progress-stepper.tsx  toast.tsx
web/frontend/src/lib/: api.ts
