[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handwright"
version = "0.9.0"
description = "Handwriting-to-font pipeline: worksheet generation, glyph extraction, and TTF building."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "opencv-python-headless>=4.13.0",
    "pillow>=12.0.0",
    "scikit-image>=0.25.0",
    "fonttools>=4.62.0",
    "brotli>=1.1.0",
    "numpy>=2.0.0",
    "qrcode[pil]>=7.4.2",
    "python-multipart>=0.0.9",
    "reportlab>=4.4.0",
    "pydantic>=2.12.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["engine", "web"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long — enforced by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["engine", "web"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
